fixed grid wrap

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -91,7 +91,7 @@ body {
   background-color: #647678;
   padding: 0.75em 0.75em 0.75em 0.75em;
 }
-.imgGrid{
+.imgGridWrapper{
   margin-top: 2em;
   display: flex;
   flex-wrap: wrap;
